Closed Bug 1944274 Opened 10 months ago Closed 10 months ago

potential crash when shutting down during mapi send

Categories

(Thunderbird :: General, defect)

defect

Tracking

(thunderbird_esr128 wontfix, thunderbird135 affected)

RESOLVED FIXED
136 Branch
Tracking Status
thunderbird_esr128 --- wontfix
thunderbird135 --- affected

People

(Reporter: mkmelin, Assigned: mkmelin)

References

Details

Attachments

(1 file)

I don't think this will solve bug 1524247 to any large extent, so filing it separately.

Status: NEW → ASSIGNED

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/38b6eefa2b69
Break out of Mapi sending if we're shutting down so we don't end up spinning event loop until we crash. r=tobyp

Status: ASSIGNED → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED
Target Milestone: --- → 136 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: