Bug 1944274 - Break out of Mapi sending if we're shutting down so we don't end up spinning event loop until we crash. r=tobyp

Differential Revision: https://phabricator.services.mozilla.com/D235764

--HG--
extra : rebase_source : c06ff6a87b5e8ca7205bee6ee14426f6f7e49c14
extra : amend_source : c118ad9deea90bbbfa57db2c75e2b6b8b7670394